# stm32_cubemx_mpu6050

./: .gitmodules  .mxproject  CMakeLists.txt  Makefile  stm32-cubemx-mpu6050.ioc
Core/Inc/: stm32l4xx_hal_conf.h  stm32l4xx_it.h
Core/Src/: gpio.c  main.c  stm32l4xx_it.c  usart.c
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_gpio.c
app/main/: CMakeLists.txt  main.cpp
app/mpu6050/: CMakeLists.txt  mpu6050.cpp  mpu6050.hpp  mpu6050_config.hpp  mpu6050_dmp.cpp  mpu6050_dmp.hpp  mpu6050_dmp_config.hpp  mpu6050_dmp_img.hpp  mpu6050_registers.hpp
app/utility/: i2c_device.cpp  i2c_device.hpp
cmake/: gcc-arm-none-eabi.cmake
